# graph2strat

./: .gitignore  .replit  Dockerfile  LICENSE  README.md  TODO  build_export.sh  changelog  control  dune-project  github_make_deb.sh  graph2strat.opam  replit.nix
.github/workflows/: build_on_tag.yml
docs/: index.html
docs/_html/: index.html
docs/graph2strat/: index.html
docs/graph2strat/Compiler/: index.html
docs/graph2strat/Importer/: index.html
docs/graph2strat/Lexer/: index.html
docs/graph2strat/Parser/: index.html
docs/graph2strat/State_machine/: index.html
docs/graph2strat/Templating/: index.html
docs/graph2strat/Utils/: index.html
docs/manpages/: g2s.1  g2spython.7
lib/: compiler.ml  compiler.mli  converter.ml  dune  importer.ml  importer.mli  lexer.mll  lib_version.ml  parser.mly  state_machine.ml  state_machine.mli  templating.ml  templating.mli  utils.ml  utils.mli
packaging/: Makefile  build_static.sh  dune_static_github.bak
packaging/deb/: Dockerfile  Makefile  changelog  control  package_deb.sh
packaging/files/: manpage
packaging/scripts/: build_export.sh  dune_static_github.bak  github_make_deb.sh  make_deb.sh
test/: convert_test.ml  dune  example.py  local_test.ml  python_lib_test.ml  switch_then_loop.ml  test.dot  test_external.py  test_template.py  test_utils.ml  toggle.ml
test/test_files/: empty_machine.py  empty_machine_with_pl.expected  empty_machine_with_pl.py  local_test.dot  readme_example.dot  switch_then_loop.dot  test_external.dot  test_external.expected  test_external.py  toggle.dot
(+12 files in other folders)
